# developers_nodes

./: .gitignore  CRTP.md  IILE.md  README.md  approachs.md  assinc.md  cmake.md  cpp_node.md  generative.md  git.md  idioms.md  parse_date.md  patterns.md  users_conteiners.md
.obsidian/: graph.json  workspace  workspace.json
conan/example_1/: CMakeLists.txt  main.cpp
cpp/: CRTP.md  IILE.md  approachs.md  chaining_method.md  cpp.md  gdb.md  idioms.md  parse_date.md  patterns.md  users_conteiners.md  valgrid.md
cpp/patterns/: generative.md
cpp/patterns/generative/: lazy_initialization.cpp
linux/: linux.md  openssl.md  tcpdump.md
patterns/generative/: CMakeLists.txt
